fixed the scrolling list height to fit on mobile

--- a/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
@@ -518,7 +518,7 @@
 
     .plans-body {
         padding: 30px 30px 15px;   
-        max-height: 55vh;
+        max-height: 45vh;
         overflow: auto;
     }
 
